--- a/.env
+++ b/.env
@@ -14,7 +14,7 @@
 # ENVIRONMENT
 #--------------------------------------------------------------------
 
-CI_ENVIRONMENT = production
+CI_ENVIRONMENT = development
 
 #--------------------------------------------------------------------
 # APP
@@ -22,7 +22,7 @@ CI_ENVIRONMENT = production
 #soy MANUEL
 # app.baseURL = ''
 # If you have trouble with `.`, you could also use `_`.
-app_baseURL = 'http://localhost:80/SistemaDeInventarios/';
+app_baseURL = 'http://localhost:8080/SistemaDeInventarios/';
 # app.forceGlobalSecureRequests = false
 # app.CSPEnabled = false
 
